Added inbound calling

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,3 +11,5 @@ block content
   p#notifications.colorful.status
   button#btnCall.button-call Call Now!
   button#btnHangup.button-hangup Hang Up
+  button#btnAnswer.button-answer Answer
+
