--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,20 @@ h1 {
   text-align: center;
 }
 
+.button-answer {
+  background-color:blue; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  position: fixed;
+  bottom: 5px;
+  right: 150px; 
+}
+
 .button-call {
   background-color:green; 
   border: none;
@@ -78,4 +92,18 @@ h1 {
   position: fixed;
   bottom: 5px;
   right: 5px; 
+}
+
+
+@-webkit-keyframes blinker {
+  from {opacity: 1.0;}
+  to {opacity: 0.0;}
+}
+.button-blink{
+	text-decoration: blink;
+	-webkit-animation-name: blinker;
+	-webkit-animation-duration: 0.6s;
+	-webkit-animation-iteration-count:infinite;
+	-webkit-animation-timing-function:ease-in-out;
+	-webkit-animation-direction: alternate;
 }
