--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,8 @@ block content
   div.container
     p.colorful We pride ourselves on our award-winning support service.</p>
   p#notifications.colorful.status
+  input#msg(type='text')
+  button#btnSend.button-send Send
   button#btnCall.button-call Call Now!
   button#btnHangup.button-hangup Hang Up
   button#btnAnswer.button-answer Answer
